--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
             <p>Hoje busco me tornar um bom desenvolvedor web, no momento atual focado no front-end.</p>
         </div>
 
-        <div id="conhecimentos">
-            <p>Tenho Experiência: <img src="imagens/html.png" alt="HTML5"> <img src="imagens/css3.png" alt="CSS3"></p>
+        <div id="divconhecimentos">
+            <p>Tenho Experiência: </br>
+            <ul>
+                <li name="HTML5" class="tecnologia html"></li>
+                <li name="HTML5" class="tecnologia css"></li>
+            </ul>
             <p>Estou Estudando: </p>
             <p>Tenho Interesse: </p>
         </div>
