Recomeçando novo portfólio

--- a/index.html
+++ b/index.html
@@ -4,42 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Portfólio Daniel Bolotaro Lopes</title>
+    <title>Portfólio</title>
 </head>
 <body>
     <header>
-        <nav>
-            <p><a href="">Sobre</a></p>
-            <p><a href="">Projetos</a></p>
-            <p><a href="">Estudos</a></p>
-            <p><a href="">Contatos</a></p>
-        </nav>
+        <h1>Portfólio</h1>
     </header>
+    <nav>
+        <a href="#">Sobre</a>
+        <a href="#">Projetos</a>
+        <a href="#">Contatos</a>
+    </nav>
     <main>
-        <img id="fotoperfil" src="imagens/perfil.gif" alt="Foto Daniel Bolotaro Lopes">
-
-        <h1>Olá, Seja Bem-vindo(a) ao Meu Portfólio!</h1>
-        
-        <div id="sobre">
-            <p>Me chamo Daniel Bolotaro Lopes e tenho 19 anos.</p>
-            <p>Atualmente estudo no Instituto Federal do Paraná (IFPR) onde curso também Informática junto ao ensino médio.</p>
-            <p>Foi no IFPR que tive meu primeiro contato com a programação em 2018, desde então tenho me apaixonado pelo ramo e buscado adquirir cada dia mais conhecimento.</p>
-            <p>Hoje busco me tornar um bom desenvolvedor web, no momento atual focado no front-end.</p>
-        </div>
-
-        <div id="divconhecimentos">
-            <p>Tenho Experiência: </br>
-            <ul>
-                <li name="HTML5" class="tecnologia html"></li>
-                <li name="HTML5" class="tecnologia css"></li>
-            </ul>
-            <p>Estou Estudando: </p>
-            <p>Tenho Interesse: </p>
-        </div>
-
+        <section id="bemvindo">
+            <p>Olá, Seja Bem-vindo ao Meu Portfólio</br>Me chamo <strong>Daniel Bolotaro Lopes</strong> e</br>Sou um <strong>Desenvolvedor Web!</strong></p>
+        </section>
     </main>
+
     
 </body>
 </html>
