Criei e estilizei o setor sobre mim

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
         <section id="bemvindo">
             <p>Olá, Seja Bem-vindo ao Meu Portfólio</br>Me chamo <strong>Daniel Bolotaro Lopes</strong> e</br>Sou um <strong>Desenvolvedor Web!</strong></p>
         </section>
+
+        <section id="sobre">
+            <h1>Sobre Mim</h1>
+        </section>
+        
+        <section id="container">
+            <img id="foto" src="/imagens/foto.gif" alt="Foto Daniel">
+
+            <p id="texto">Me chamo Daniel Bolotaro Lopes e tenho 19 anos, sou natural de Londrina-Pr, onde vivo até hoje. <br> Atualmente estudo no Instituto Federal do Paraná (IFPR), onde curso <strong>Informática</strong> junto ao Ensino Médio. <br>
+            Meu primeiro contato com a <strong>Programação</strong> foi em 2018 no próprio IFPR, desde então tenho me apaixonado cada dia mais pela área, principalmente pelo ramo de <strong>Desenvolvimento Web</strong>. Área pela qual tenho buscado aprimorar meus conhecimentos, atualmente focando mais no <strong>front-end</strong></p>
+        </section>
+
+        <section id="conhecimentos">
+            <h1>Conhecimentos</h1>
+        </section>
+
     </main>
 
     
