Criei o setor conhecimentos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1>Portfólio</h1>
     </header>
     <nav>
-        <a href="#">Sobre</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#conhecimentos">Conhecimentos</a>
         <a href="#">Projetos</a>
         <a href="#">Contatos</a>
     </nav>
@@ -27,16 +28,23 @@
         </section>
         
         <section id="container">
-            <img id="foto" src="/imagens/foto.gif" alt="Foto Daniel">
+            <img id="foto" src="imagens/foto.gif" alt="Foto Daniel">
 
             <p id="texto">Me chamo Daniel Bolotaro Lopes e tenho 19 anos, sou natural de Londrina-Pr, onde vivo até hoje. <br> Atualmente estudo no Instituto Federal do Paraná (IFPR), onde curso <strong>Informática</strong> junto ao Ensino Médio. <br>
-            Meu primeiro contato com a <strong>Programação</strong> foi em 2018 no próprio IFPR, desde então tenho me apaixonado cada dia mais pela área, principalmente pelo ramo de <strong>Desenvolvimento Web</strong>. Área pela qual tenho buscado aprimorar meus conhecimentos, atualmente focando mais no <strong>front-end</strong></p>
+            Meu primeiro contato com a <strong>Programação</strong> foi em 2018 no próprio IFPR, desde então tenho me apaixonado cada dia mais pela área, principalmente pelo ramo de <strong>Desenvolvimento Web</strong>. Área na qual tenho buscado aprimorar meus conhecimentos, atualmente focando mais no <strong>Front-end</strong></p>
         </section>
 
         <section id="conhecimentos">
             <h1>Conhecimentos</h1>
         </section>
 
+        <section>
+            <ul id="listaconhecimentos">
+                <ul>Tenho Experiência</ul>
+                <ul>Estou Aprendendo</ul>
+                <ul>Tenho Interesse</ul>
+            </ul>
+        </section>
     </main>
 
     
