Finalizei a seção conhecimentos e iniciei a de projetos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="#sobre">Sobre</a>
         <a href="#conhecimentos">Conhecimentos</a>
-        <a href="#">Projetos</a>
+        <a href="#projetos">Projetos</a>
         <a href="#">Contatos</a>
     </nav>
     <main>
@@ -38,12 +38,34 @@
             <h1>Conhecimentos</h1>
         </section>
 
-        <section>
-            <ul id="listaconhecimentos">
-                <ul>Tenho Experiência</ul>
-                <ul>Estou Aprendendo</ul>
-                <ul>Tenho Interesse</ul>
-            </ul>
+        <section id="listaconhecimento" >
+            <div id="experiencia">
+                <span>Tenho Experiência</span>
+                <ul>
+                    <li id="html"></li>
+                    <li id="css"></li>
+                </ul>
+            </div>
+            
+            <div id="estudando">
+                <span>Estou Estudando</span>
+                <ul>
+                    <li id="js"></li>
+                </ul>
+            </div>
+
+            <div id="interesse">
+                <span>Tenho Interesse</span>
+                <ul>
+                    <li id="react"></li>
+                    <li id="node"></li>
+                    <li id="typescript"></li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="projetos">
+            <h1>Projetos</h1>
         </section>
     </main>
 
